<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/txId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txId" />
    <EditText
        android:id="@+id/txRazon_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txRazon_social" />
    <EditText
        android:id="@+id/txRuc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txRuc" />
    <EditText
        android:id="@+id/txDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txDireccion" />
    <EditText
        android:id="@+id/txTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txTelefono" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="109dp"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:onClick="Agregar"
            android:text="@string/boton" />

        <Button
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/btnRecu"
            android:onClick="recuperar"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="Modificar"
            android:text="@string/btnModificar" />

    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:onClick="Eliminar"
        android:text="@string/btnEliminar" />


</LinearLayout>